--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version: '3'
 services:
-  thesis-build:
+  hcmuit-thesis:
+    container_name: hcmuit-thesis
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - .:/app
-    working_dir: /app
-    # command: ["echo", "thesis.tex", "|", "/app", "-r", "pdflatex thesis.tex && biber thesis && pdflatex thesis.tex"]
+      - ./pdf:/app/result
