--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3'
 services:
   my-thesis:
-    container_name: my-thesis-template
-    image: quay.io/sonnh-uit/hcmuit-thesis:dev
+    container_name: dev-thesis-template
+    image: quay.io/sonnh-uit/hcmuit-thesis
     volumes:
       - .:/app
