--- a/presentation/docker-compose.yml
+++ b/presentation/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
-  my-thesis:
-    container_name: thesis-slide
-    image: quay.io/sonnh-uit/hcmuit-thesis
+  thesis-slide:
+    container_name: slide
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .:/app
-    entrypoint: ["tail", "-f", "/dev/null"]
