--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
-  my-thesis:
-    container_name: hcmuit-thesis-template
+  uit-thesis:
+    container_name: hcmuit-thesis
     image: quay.io/sonnh-uit/hcmuit-thesis
     volumes:
-      - .:/app
+      - .:/uit-thesis
+    environment:
+      - IS_GLOSSARIES=1
