--- a/check-image-docker-compose.yml
+++ b/check-image-docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: hcmuit-thesis-check
     image: quay.io/sonnh-uit/hcmuit-thesis:dev
     volumes:
-      - .:/uit-thesis
+      - .:/uit-thesis:rw
     environment:
       - IS_GLOSSARIES=1
     
