feat ✨: Update Docker Compose configuration to specify container user

--- a/check-image-docker-compose.yml
+++ b/check-image-docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: quay.io/sonnh-uit/hcmuit-thesis:dev
     volumes:
       - .:/uit-thesis:rw
+    user: root
     environment:
       - IS_GLOSSARIES=1
     
